# packaging_python_code

./: README.md  pyproject.toml
src/my_package/: my_module.py
